syntax = "proto3";
option go_package = "user";

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string username = 3;
  string avatarurl = 4;
  string location = 5;
  Statistics statistics = 6;
  repeated string listURLs = 7;
}

message Statistics {
  int64 followers = 1; 
  int64 following = 2; 
  int64 repos = 3; 
  int64 gists = 4; 
}